fix(comp: alert): align icon with text

--- a/packages/components/alert/style/index.less
+++ b/packages/components/alert/style/index.less
@@ -81,5 +81,8 @@
 
   .@{icon-prefix} {
     font-size: @alert-icon-font-size;
+    position: relative;
+    top: 1px;
+    line-height: 0;
   }
 }
